--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,8 @@
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
-   <meta name="author" content="Tom Preston-Werner" />
-   <link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="Tom Preston-Werner" type="application/atom+xml" />
+   <meta name="author" content="nostream" />
+   <link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="nostream" type="application/atom+xml" />
 
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
@@ -26,7 +26,7 @@ var WRInitTime=(new Date()).getTime();
 
 <div class="site">
   <div class="title">
-    <a href="/">Tom Preston-Werner</a>
+    <a href="/">王丁春的技术博客</a>
     <a class="extra" href="/">home</a>
   </div>
   
@@ -35,9 +35,9 @@ var WRInitTime=(new Date()).getTime();
   <div class="footer">
     <div class="contact">
       <p>
-        Tom Preston-Werner<br />
+        kenny wang<br />
         Cofounder of <a href="http://github.com/">GitHub</a><br />
-        tom@mojombo.com
+        nostream@163.com
       </p>
     </div>
     <div class="contact">
@@ -46,11 +46,6 @@ var WRInitTime=(new Date()).getTime();
         <a href="http://twitter.com/nostream/">twitter.com/nostream</a><br />
         <a href="http://flickr.com/photos/nostream/">flickr.com/photos/nostream</a>
       </p>
-    </div>
-    <div class="rss">
-      <a href="http://feeds.feedburner.com/tom-preston-werner">
-        <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
-      </a>
     </div>
   </div>
 </div>
