--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@ var WRInitTime=(new Date()).getTime();
 
 <div class="site">
   <div class="title">
-    <a href="/">Íõ¶¡´ºµÄ¼¼Êõ²©¿Í</a>
+    <a href="/">ç‹ä¸æ˜¥çš„æŠ€æœ¯åšå®¢</a>
     <a class="extra" href="/">home</a>
   </div>
   
