--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,8 @@
     <meta name="author" content="{{ site.author }}" />
     <meta name="robots" content="index, follow" />
     <meta name="viewport" content="user-scalable=no,width=device-width" />
-    <meta name="keywords" content="SCM Kenny" />
-    <meta name="copyright" content="Copyright 2012 to Present"/>
-    <link href="http://wangdingchun.com/" rel="home" />
+    <meta name="keywords" content="dcwang, scm, linux, kvm, python" />
+    <link href="{{ site.url }}/feed" rel="alternate" title="dcwang RSS feed" type="application/rss+xml" />
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
     <link type="text/css" rel="stylesheet" media="screen, projection" href="/css/screen.css" /> 
@@ -24,7 +23,7 @@
 	<script type="text/javascript">
 			WebFontConfig = {
 			  custom: { families: ['DroidSansRegular', 'YanoneKaffeesatzRegular'],
-				urls: [ 'http://tjstein.com/css/screen.css' ] }
+				urls: [ '/css/screen.css' ] }
 			};
 
 	      (function() {
@@ -38,7 +37,6 @@
 	        s.parentNode.insertBefore(wf, s);
 	      })();
 	</script>
-  {% include google_analytics.html %}	
   </head>
   <body>
     <div class="container">
@@ -65,10 +63,21 @@
           </ul>
         </div>
         <div class="sidebarbox"> 
+          <h4>Subscribe</h4> 
+          <ul> 
+            <li> 
+              <a title="RSS Feed" href="{{ site.url }}/feed" class="icon-link" id="feed-link">RSS</a> 
+            </li> 
+          </ul> 
+        </div> 
+        <div class="sidebarbox"> 
           <h4>Elsewhere</h4> 
           <ul> 
             <li> 
-              <a rel="bookmark" title="weibo" href="http://weibo.com/u/1639635743" class="icon-link" id="flickr-link">weibo</a> 
+              <a rel="bookmark" title="Twitter" href="http://twitter.com/wangdingchun" class="icon-link" id="twitter-link">Twitter</a> 
+            </li> 
+            <li> 
+              <a rel="bookmark" title="GitHub" href="http://github.com/nostream" class="icon-link" id="github-link">GitHub</a> 
             </li> 
           </ul> 
         </div>
@@ -76,18 +85,19 @@
           <h4>Contact Me</h4> 
           <ul> 
             <li> 
-              <a rel="bookmark" title="Email" href="mailto:nostream@163.com" class="icon-link" id="gmail-link">Gmail</a> 
+              <a rel="bookmark" title="Email" href="mailto:lovedcwang@gmail.com" class="icon-link" id="gmail-link">Gmail</a> 
             </li> 
           </ul> 
         </div> 
       </div>
 
       <footer class="span-21 last" id="footer">
-        All content copyright &copy; SCM Kenny. Written in mostly valid <a href="http://validator.w3.org/check?uri=http%3A%2F%2Ftjstein.com%2F" title="Valid HTML5" rel="external" target="_blank">HTML5</a> and <a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Ftjstein.com&amp;profile=css3&amp;usermedium=all&amp;warning=1" title="Valid CSS3" rel="external" target="_blank">CSS3</a>. Powered by <a href="http://github.com/mojombo/jekyll" title="The Jekyll (static site generator) code repository" rel="external" target="_blank">Jekyll</a>.
+        Powered by <a href="http://github.com/mojombo/jekyll" title="The Jekyll (static site generator) code repository" rel="external" target="_blank">Jekyll</a>. 
       </footer>
     </div>
 
     {% include disqus.html %}
+    {% include google_analytics.html %}
 	<script src="/js/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
   </body>
