--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,31 +3,35 @@ layout: default
 ---
 <article class="post">
 
-  <h3><a href="{{ site.url }}{{ page.url }}" rel="bookmark permalink" title="Permanent link to this post">{{ page.title }}</a></h3>
+<h3><a href="{{ site.url }}{{ page.url }}" rel="bookmark permalink" title="Permanent link to this post">{{ page.title }}</a></h3>
 
-  {{ content }}
+{{ content }}
 
-  <div class="meta">
-   <div class="published">
-    Published: {{ page.date | date: "%Y-%m-%d" }}
-   </div>
-  </div>
+<a class="follow-box" href="https://twitter.com/wangdingchun">
+    <h3>You should probably follow <strong>@wangdingchun</strong> on Twitter</h3>
+</a>
+
+<div class="meta">
+    <div class="published">
+        Published: {{ page.date | date: "%Y-%m-%d" }}
+    </div>
+</div>
 
 </article>
 
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'tjstein'; // required: replace example with your forum shortname
+    var disqus_shortname = 'dcwang'; // required: replace example with your forum shortname
 
     // The following are highly recommended additional parameters. Remove the slashes in front to use.
     // var disqus_identifier = 'unique_dynamic_id_1234';
-    var disqus_url = '{{ site.url }}{{ page.url }}';
+    // var disqus_url = 'http://example.com/permalink-to-page.html';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
+     var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+     dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+     (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+     })();
 </script>
