--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,8 +7,8 @@ layout: default
 
 {{ content }}
 
-<a class="follow-box" href="https://twitter.com/wangdingchun">
-    <h3>You should probably follow <strong>@wangdingchun</strong> on Twitter</h3>
+<a class="follow-box" href="http://weibo.com/1639635743">
+    <h3>You should probably follow <strong>@Ï£Õ÷Ê®×Ö¾ü</strong> on Twitter</h3>
 </a>
 
 <div class="meta">
@@ -19,19 +19,7 @@ layout: default
 
 </article>
 
-<div id="disqus_thread"></div>
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'dcwang'; // required: replace example with your forum shortname
-
-    // The following are highly recommended additional parameters. Remove the slashes in front to use.
-    // var disqus_identifier = 'unique_dynamic_id_1234';
-    // var disqus_url = 'http://example.com/permalink-to-page.html';
-
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
-     var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-     dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-     (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-     })();
-</script>
+<!-- UY BEGIN -->
+<div id="uyan_frame"></div>
+<script type="text/javascript" id="UYScript" src="http://uyan.cc/js/iframe.js?UYUserId=3396" async=""></script>
+<!-- UY END -->
