--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
 {{ content }}
 
 <a class="follow-box" href="http://weibo.com/1639635743">
-    <h3>You should probably follow <strong>@希征十字军</strong> on Twitter</h3>
+    <h3>You should probably follow <strong>@希征十字军</strong> on Sina Weibo</h3>
 </a>
 
 <div class="meta">
